--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -19,10 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# ALL STOCKS READ INTO DF\n",
@@ -40,28 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -111,147 +92,147 @@
        "    <tr>\n",
        "      <th>2010-06-29</th>\n",
        "      <td>17.490000</td>\n",
-       "      <td>4731000.0</td>\n",
+       "      <td>4731000</td>\n",
        "      <td>8.27</td>\n",
-       "      <td>47400.0</td>\n",
+       "      <td>47400</td>\n",
        "      <td>45.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>9.07</td>\n",
-       "      <td>4079400.0</td>\n",
+       "      <td>4079400</td>\n",
        "      <td>66.239998</td>\n",
-       "      <td>4498100.0</td>\n",
+       "      <td>4498100</td>\n",
        "      <td>114.419998</td>\n",
-       "      <td>2243400.0</td>\n",
+       "      <td>2243400</td>\n",
        "      <td>14.48</td>\n",
-       "      <td>114904900.0</td>\n",
+       "      <td>114904900</td>\n",
        "      <td>12.47</td>\n",
-       "      <td>467600.0</td>\n",
+       "      <td>467600</td>\n",
        "      <td>23.889999</td>\n",
-       "      <td>18766300.0</td>\n",
+       "      <td>18766300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-06-30</th>\n",
        "      <td>17.280001</td>\n",
-       "      <td>4224600.0</td>\n",
+       "      <td>4224600</td>\n",
        "      <td>8.35</td>\n",
-       "      <td>12800.0</td>\n",
+       "      <td>12800</td>\n",
        "      <td>42.5</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>8.83</td>\n",
-       "      <td>3519600.0</td>\n",
+       "      <td>3519600</td>\n",
        "      <td>65.129997</td>\n",
-       "      <td>3268500.0</td>\n",
+       "      <td>3268500</td>\n",
        "      <td>113.830002</td>\n",
-       "      <td>1937300.0</td>\n",
+       "      <td>1937300</td>\n",
        "      <td>14.42</td>\n",
-       "      <td>81568200.0</td>\n",
+       "      <td>81568200</td>\n",
        "      <td>12.53</td>\n",
-       "      <td>201000.0</td>\n",
+       "      <td>201000</td>\n",
        "      <td>23.830000</td>\n",
-       "      <td>17187100.0</td>\n",
+       "      <td>17187100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-07-01</th>\n",
        "      <td>17.590000</td>\n",
-       "      <td>6328900.0</td>\n",
+       "      <td>6328900</td>\n",
        "      <td>8.71</td>\n",
-       "      <td>70400.0</td>\n",
+       "      <td>70400</td>\n",
        "      <td>44.5</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>8.68</td>\n",
-       "      <td>3968000.0</td>\n",
+       "      <td>3968000</td>\n",
        "      <td>64.820000</td>\n",
-       "      <td>5136200.0</td>\n",
+       "      <td>5136200</td>\n",
        "      <td>117.449997</td>\n",
-       "      <td>2078200.0</td>\n",
+       "      <td>2078200</td>\n",
        "      <td>14.12</td>\n",
-       "      <td>107077700.0</td>\n",
+       "      <td>107077700</td>\n",
        "      <td>12.43</td>\n",
-       "      <td>342500.0</td>\n",
+       "      <td>342500</td>\n",
        "      <td>21.959999</td>\n",
-       "      <td>8218800.0</td>\n",
+       "      <td>8218800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-07-02</th>\n",
        "      <td>17.430000</td>\n",
-       "      <td>2315300.0</td>\n",
+       "      <td>2315300</td>\n",
        "      <td>8.59</td>\n",
-       "      <td>41200.0</td>\n",
+       "      <td>41200</td>\n",
        "      <td>45.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>8.60</td>\n",
-       "      <td>2444000.0</td>\n",
+       "      <td>2444000</td>\n",
        "      <td>64.239998</td>\n",
-       "      <td>3766900.0</td>\n",
+       "      <td>3766900</td>\n",
        "      <td>120.519997</td>\n",
-       "      <td>2082800.0</td>\n",
+       "      <td>2082800</td>\n",
        "      <td>13.88</td>\n",
-       "      <td>78544600.0</td>\n",
+       "      <td>78544600</td>\n",
        "      <td>12.45</td>\n",
-       "      <td>157800.0</td>\n",
+       "      <td>157800</td>\n",
        "      <td>19.200001</td>\n",
-       "      <td>5139800.0</td>\n",
+       "      <td>5139800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-07-06</th>\n",
        "      <td>17.690001</td>\n",
-       "      <td>2955000.0</td>\n",
+       "      <td>2955000</td>\n",
        "      <td>8.60</td>\n",
-       "      <td>30600.0</td>\n",
+       "      <td>30600</td>\n",
        "      <td>37.5</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>8.61</td>\n",
-       "      <td>3302200.0</td>\n",
+       "      <td>3302200</td>\n",
        "      <td>63.570000</td>\n",
-       "      <td>3913900.0</td>\n",
+       "      <td>3913900</td>\n",
        "      <td>121.879997</td>\n",
-       "      <td>2506700.0</td>\n",
+       "      <td>2506700</td>\n",
        "      <td>13.97</td>\n",
-       "      <td>77154700.0</td>\n",
+       "      <td>77154700</td>\n",
        "      <td>12.81</td>\n",
-       "      <td>247400.0</td>\n",
+       "      <td>247400</td>\n",
        "      <td>16.110001</td>\n",
-       "      <td>6866900.0</td>\n",
+       "      <td>6866900</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            abb_close  abb_volume  asys_close  asys_volume  ccgi_close  \\\n",
-       "Date                                                                     \n",
-       "2010-06-29  17.490000   4731000.0        8.27      47400.0        45.0   \n",
-       "2010-06-30  17.280001   4224600.0        8.35      12800.0        42.5   \n",
-       "2010-07-01  17.590000   6328900.0        8.71      70400.0        44.5   \n",
-       "2010-07-02  17.430000   2315300.0        8.59      41200.0        45.0   \n",
-       "2010-07-06  17.690001   2955000.0        8.60      30600.0        37.5   \n",
+       "            abb_close abb_volume  asys_close asys_volume  ccgi_close  \\\n",
+       "Date                                                                   \n",
+       "2010-06-29  17.490000    4731000        8.27       47400        45.0   \n",
+       "2010-06-30  17.280001    4224600        8.35       12800        42.5   \n",
+       "2010-07-01  17.590000    6328900        8.71       70400        44.5   \n",
+       "2010-07-02  17.430000    2315300        8.59       41200        45.0   \n",
+       "2010-07-06  17.690001    2955000        8.60       30600        37.5   \n",
        "\n",
-       "            ccgi_volume  cenx_close  cenx_volume  cmi_close  cmi_volume  \\\n",
-       "Date                                                                      \n",
-       "2010-06-29          0.0        9.07    4079400.0  66.239998   4498100.0   \n",
-       "2010-06-30          0.0        8.83    3519600.0  65.129997   3268500.0   \n",
-       "2010-07-01          0.0        8.68    3968000.0  64.820000   5136200.0   \n",
-       "2010-07-02          0.0        8.60    2444000.0  64.239998   3766900.0   \n",
-       "2010-07-06          0.0        8.61    3302200.0  63.570000   3913900.0   \n",
+       "           ccgi_volume  cenx_close cenx_volume  cmi_close cmi_volume  \\\n",
+       "Date                                                                   \n",
+       "2010-06-29           0        9.07     4079400  66.239998    4498100   \n",
+       "2010-06-30           0        8.83     3519600  65.129997    3268500   \n",
+       "2010-07-01           0        8.68     3968000  64.820000    5136200   \n",
+       "2010-07-02           0        8.60     2444000  64.239998    3766900   \n",
+       "2010-07-06           0        8.61     3302200  63.570000    3913900   \n",
        "\n",
-       "            fslr_close  fslr_volume  ge_close    ge_volume  pcrfy_close  \\\n",
-       "Date                                                                      \n",
-       "2010-06-29  114.419998    2243400.0     14.48  114904900.0        12.47   \n",
-       "2010-06-30  113.830002    1937300.0     14.42   81568200.0        12.53   \n",
-       "2010-07-01  117.449997    2078200.0     14.12  107077700.0        12.43   \n",
-       "2010-07-02  120.519997    2082800.0     13.88   78544600.0        12.45   \n",
-       "2010-07-06  121.879997    2506700.0     13.97   77154700.0        12.81   \n",
+       "            fslr_close fslr_volume  ge_close  ge_volume  pcrfy_close  \\\n",
+       "Date                                                                   \n",
+       "2010-06-29  114.419998     2243400     14.48  114904900        12.47   \n",
+       "2010-06-30  113.830002     1937300     14.42   81568200        12.53   \n",
+       "2010-07-01  117.449997     2078200     14.12  107077700        12.43   \n",
+       "2010-07-02  120.519997     2082800     13.88   78544600        12.45   \n",
+       "2010-07-06  121.879997     2506700     13.97   77154700        12.81   \n",
        "\n",
-       "            pcrfy_volume  tsla_close  tsla_volume  \n",
-       "Date                                               \n",
-       "2010-06-29      467600.0   23.889999   18766300.0  \n",
-       "2010-06-30      201000.0   23.830000   17187100.0  \n",
-       "2010-07-01      342500.0   21.959999    8218800.0  \n",
-       "2010-07-02      157800.0   19.200001    5139800.0  \n",
-       "2010-07-06      247400.0   16.110001    6866900.0  "
+       "           pcrfy_volume  tsla_close tsla_volume  \n",
+       "Date                                             \n",
+       "2010-06-29       467600   23.889999    18766300  \n",
+       "2010-06-30       201000   23.830000    17187100  \n",
+       "2010-07-01       342500   21.959999     8218800  \n",
+       "2010-07-02       157800   19.200001     5139800  \n",
+       "2010-07-06       247400   16.110001     6866900  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,74 +246,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            abb_sentiment  abb_volume  abb_buzz\n",
-      "Date                                           \n",
-      "2017-08-31            5.0         2.0       5.0\n",
-      "2017-08-30            5.0         2.0       5.0\n",
-      "2017-08-29            5.0         1.0       2.0\n",
-      "2017-08-28           -2.0         2.0       5.0\n",
-      "2017-08-27            3.0         3.0      10.0\n",
-      "            asys_sentiment  asys_volume  asys_buzz\n",
-      "Date                                              \n",
-      "2017-08-31             0.0          0.0        0.0\n",
-      "2017-08-30             0.0          0.0        0.0\n",
-      "2017-08-29             0.0          0.0        0.0\n",
-      "2017-08-28             2.0          1.0        5.0\n",
-      "2017-08-27             0.0          0.0        0.0\n",
-      "            ccgi_sentiment  ccgi_volume  ccgi_buzz\n",
-      "Date                                              \n",
-      "2017-08-31               0            0          0\n",
-      "2017-08-30               0            0          0\n",
-      "2017-08-29               0            0          0\n",
-      "2017-08-28               0            0          0\n",
-      "2017-08-27               0            0          0\n",
-      "            cenx_sentiment  cenx_volume  cenx_buzz\n",
-      "Date                                              \n",
-      "2017-08-31             0.0          0.0        0.0\n",
-      "2017-08-30             0.0          0.0        0.0\n",
-      "2017-08-29             0.0          0.0        0.0\n",
-      "2017-08-28             0.0          0.0        0.0\n",
-      "2017-08-27             0.0          0.0        0.0\n",
-      "            cmi_sentiment  cmi_volume  cmi_buzz\n",
-      "Date                                           \n",
-      "2017-08-31            2.0         5.0       1.0\n",
-      "2017-08-30            1.0        26.0      10.0\n",
-      "2017-08-29           -2.0        12.0       5.0\n",
-      "2017-08-28           -4.0         6.0      10.0\n",
-      "2017-08-27           -1.0        20.0      10.0\n",
-      "            fslr_sentiment  fslr_volume  fslr_buzz\n",
-      "Date                                              \n",
-      "2017-08-31             1.0          1.0        1.0\n",
-      "2017-08-30             0.0          0.0        0.0\n",
-      "2017-08-29             0.0          0.0        0.0\n",
-      "2017-08-28             0.0          0.0        0.0\n",
-      "2017-08-27             0.0          0.0        0.0\n",
-      "            ge_sentiment  ge_volume  ge_buzz\n",
-      "Date                                        \n",
-      "2017-08-31          -4.0       20.0      4.0\n",
-      "2017-08-30           1.0       10.0      2.0\n",
-      "2017-08-29          -2.0        3.0      0.0\n",
-      "2017-08-28          -1.0       48.0     10.0\n",
-      "2017-08-27           1.0       16.0      5.0\n",
-      "            tsla_sentiment  tsla_volume  tsla_buzz\n",
-      "Date                                              \n",
-      "2017-08-31             3.0         24.0        2.0\n",
-      "2017-08-30            -2.0         16.0        1.0\n",
-      "2017-08-29             1.0         21.0        1.0\n",
-      "2017-08-28            -1.0         23.0        2.0\n",
-      "2017-08-27            -1.0         12.0        3.0\n"
-     ]
-    }
-   ],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# ALL STOCKS READ INTO DF\n",
     "\n",
@@ -361,23 +277,23 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [ipykernel_py2]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [ipykernel_py2]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
