--- a/pipeline-Gautam.ipynb
+++ b/pipeline-Gautam.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -19,8 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -79,7 +81,7 @@
        "2007-09-07  1453.550049     3191080000"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,8 +115,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -341,7 +345,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,8 +376,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -568,7 +574,7 @@
        "2010-07-06      247400.0  16.110001    6866900.0  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,18 +604,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'xrange' is not defined",
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'str' and 'str'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-51-4d62e7a2e40c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprices\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mall_cols\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;34m'close'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mmat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_pre\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mprices\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mxrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'xrange' is not defined"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-942d7f7409a1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mmat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_pre\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mprices\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'str'"
      ]
     }
    ],
@@ -623,14 +629,15 @@
     "\n",
     "prices = [k for k in all_cols if 'close' in k]\n",
     "mat = df_pre[prices].as_matrix()\n",
-    "for i in xrange(len(mat)):\n",
+    "for i in range(len(mat)-1):\n",
     "    mat[i+1] = mat[i+1] - mat[i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -643,128 +650,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>abb_close</th>\n",
-       "      <th>asys_close</th>\n",
-       "      <th>ccgi_close</th>\n",
-       "      <th>cenx_close</th>\n",
-       "      <th>cmi_close</th>\n",
-       "      <th>fslr_close</th>\n",
-       "      <th>ge_close</th>\n",
-       "      <th>pcrfy_close</th>\n",
-       "      <th>tsla_close</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2010-06-29</th>\n",
-       "      <td>17.490000</td>\n",
-       "      <td>8.270000</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>9.070000</td>\n",
-       "      <td>66.239998</td>\n",
-       "      <td>114.419998</td>\n",
-       "      <td>14.480000</td>\n",
-       "      <td>12.470000</td>\n",
-       "      <td>23.889999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-06-30</th>\n",
-       "      <td>17.280001</td>\n",
-       "      <td>8.350000</td>\n",
-       "      <td>42.500000</td>\n",
-       "      <td>8.830000</td>\n",
-       "      <td>65.129997</td>\n",
-       "      <td>113.830002</td>\n",
-       "      <td>14.420000</td>\n",
-       "      <td>12.530000</td>\n",
-       "      <td>23.830000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-07-01</th>\n",
-       "      <td>17.590000</td>\n",
-       "      <td>8.710000</td>\n",
-       "      <td>44.500000</td>\n",
-       "      <td>8.680000</td>\n",
-       "      <td>64.820000</td>\n",
-       "      <td>117.449997</td>\n",
-       "      <td>14.120000</td>\n",
-       "      <td>12.430000</td>\n",
-       "      <td>21.959999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-07-02</th>\n",
-       "      <td>17.430000</td>\n",
-       "      <td>8.590000</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>8.600000</td>\n",
-       "      <td>64.239998</td>\n",
-       "      <td>120.519997</td>\n",
-       "      <td>13.880000</td>\n",
-       "      <td>12.450000</td>\n",
-       "      <td>19.200001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-07-06</th>\n",
-       "      <td>17.690001</td>\n",
-       "      <td>8.600000</td>\n",
-       "      <td>37.500000</td>\n",
-       "      <td>8.610000</td>\n",
-       "      <td>63.570000</td>\n",
-       "      <td>121.879997</td>\n",
-       "      <td>13.970000</td>\n",
-       "      <td>12.810000</td>\n",
-       "      <td>16.110001</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            abb_close asys_close ccgi_close cenx_close  cmi_close  fslr_close  \\\n",
-       "Date                                                                            \n",
-       "2010-06-29  17.490000   8.270000  45.000000   9.070000  66.239998  114.419998   \n",
-       "2010-06-30  17.280001   8.350000  42.500000   8.830000  65.129997  113.830002   \n",
-       "2010-07-01  17.590000   8.710000  44.500000   8.680000  64.820000  117.449997   \n",
-       "2010-07-02  17.430000   8.590000  45.000000   8.600000  64.239998  120.519997   \n",
-       "2010-07-06  17.690001   8.600000  37.500000   8.610000  63.570000  121.879997   \n",
-       "\n",
-       "             ge_close pcrfy_close tsla_close  \n",
-       "Date                                          \n",
-       "2010-06-29  14.480000   12.470000  23.889999  \n",
-       "2010-06-30  14.420000   12.530000  23.830000  \n",
-       "2010-07-01  14.120000   12.430000  21.959999  \n",
-       "2010-07-02  13.880000   12.450000  19.200001  \n",
-       "2010-07-06  13.970000   12.810000  16.110001  "
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#DATAFRAME OF ONLY STOCK TICKS\n",
     "\n",
@@ -788,28 +676,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time Series abb_close is  nonstationary\n",
-      "Time Series asys_close is  nonstationary\n",
-      "Time Series ccgi_closeis stationary\n",
-      "Time Series cenx_close is  nonstationary\n",
-      "Time Series cmi_close is  nonstationary\n",
-      "Time Series fslr_close is  nonstationary\n",
-      "Time Series ge_close is  nonstationary\n",
-      "Time Series pcrfy_close is  nonstationary\n",
-      "Time Series tsla_close is  nonstationary\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "#NON-STATIONARITY CHECK\n",
-    "import statsmodels as sm\n",
+    "import statsmodels.api as sm\n",
     "import numpy as np\n",
     "\n",
     "for col in df_ticks:\n",
@@ -829,89 +703,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1805, 1)\n",
-      "(1805, 1)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/sklearn/utils/validation.py:526: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Unknown label type: 'continuous'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-104-008d3beae732>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mlr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mpr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfig\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/sklearn/linear_model/logistic.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m   1172\u001b[0m         X, y = check_X_y(X, y, accept_sparse='csr', dtype=np.float64,\n\u001b[1;32m   1173\u001b[0m                          order=\"C\")\n\u001b[0;32m-> 1174\u001b[0;31m         \u001b[0mcheck_classification_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1175\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclasses_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m         \u001b[0mn_samples\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/sklearn/utils/multiclass.py\u001b[0m in \u001b[0;36mcheck_classification_targets\u001b[0;34m(y)\u001b[0m\n\u001b[1;32m    170\u001b[0m     if y_type not in ['binary', 'multiclass', 'multiclass-multioutput',\n\u001b[1;32m    171\u001b[0m             'multilabel-indicator', 'multilabel-sequences']:\n\u001b[0;32m--> 172\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Unknown label type: %r\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0my_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    173\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    174\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Unknown label type: 'continuous'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn import linear_model\n",
-    "lr = linear_model.LogisticRegression()\n",
-    "a = np.arange(len(df_ticks)).reshape((len(df_ticks),1))\n",
-    "b = df_ticks[\"abb_close\"].astype(float).as_matrix().reshape((len(df_ticks),1))\n",
-    "print (a.shape)\n",
-    "print (b.shape)\n",
-    "lr.fit(a,b)\n",
-    "pr = lr.predict(b)\n",
-    "plt.fig()\n",
-    "df_ticks[\"abb_close\"].astype(float).plot()\n",
-    "pr.plot()"
+    "df_ticks['abb_close'].plot()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time Series abb_close is  nonstationary\n",
-      "Time Series asys_close is  nonstationary\n",
-      "Time Series ccgi_closeis stationary\n",
-      "Time Series cenx_close is  nonstationary\n",
-      "Time Series cmi_close is  nonstationary\n",
-      "Time Series fslr_close is  nonstationary\n",
-      "Time Series ge_close is  nonstationary\n",
-      "Time Series pcrfy_close is  nonstationary\n",
-      "Time Series tsla_close is  nonstationary\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from scipy import signal\n",
-    "from pandas import Series\n",
-    "\n",
-    "for col in df_ticks:\n",
-    "    d_order0=sm.tsa.stattools.adfuller(Series(signal.detrend(df_ticks[col].astype(float))))\n",
-    "    if d_order0[0]> d_order0[4]['5%']: \n",
-    "        print('Time Series ' + col +' is  nonstationary')\n",
-    "#         print(d)\n",
-    "    else:\n",
-    "        print('Time Series ' + col + 'is stationary')\n",
-    "\n",
-    "\n",
-    "    \n",
-    "    "
+    "rolling_mean = pd.rolling_mean(df_ticks['abb_close'],100)\n",
+    "detrend = df_ticks['abb_close'] - rolling_mean\n",
+    "rolling_mean.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.rolling_std(df_ticks['abb_close'],100).plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_ticks"
    ]
   },
   {
